@@ -111,6 +111,7 @@ DEFINE_ENUM(EMasterReign,
     ((RenameTransferQuota)                                          (1320))  // kiselyovp
     ((YT_13015_CorrectSrcTxForCrossShardCopy)                       (1321))  // shakurov
     ((SubjectAliases)                                               (1400))  // s-v-m
+    ((OpaquePortalEntrances)                                        (1401))  // shakurov
 );
 
 ////////////////////////////////////////////////////////////////////////////////
